// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ParentSidebar > rend les variantes depliee et repliee > collapsed 1`] = `
<DocumentFragment>
  <aside
    class="hidden border-r border-border-subtle bg-bg-elevated md:block w-20"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="border-b border-border-subtle p-3"
      >
        <div
          class="flex items-center justify-center"
        >
          <a
            class="rounded-radius-button px-2 py-1.5 text-left transition-colors duration-200 hover:bg-bg-surface-hover focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            href="/parent/dashboard"
            title="Ezra - Parent"
          >
            <p
              class="font-display font-black tracking-tight text-text-primary text-base"
            >
              EP
            </p>
            <p
              class="text-xs text-text-secondary sr-only"
            >
              Parent Demo
            </p>
          </a>
          <div
            class="inline-flex"
            tabindex="0"
          >
            <button
              aria-label="Deplier la navigation"
              class="items-center justify-center gap-2 rounded-radius-button font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary disabled:pointer-events-none disabled:opacity-55 bg-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary h-touch-sm px-3.5 text-sm hidden lg:inline-flex"
            >
              <svg
                aria-hidden="true"
                class="size-4 transition-transform duration-200 rotate-180"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.8"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <nav
        aria-label="Navigation principale parent"
        class="flex-1 space-y-4 overflow-y-auto px-2 py-3"
      >
        <section
          class="space-y-1"
        >
          <p
            class="sr-only"
          >
            Essentiel
          </p>
          <div
            class="block"
            tabindex="0"
          >
            <a
              aria-current="page"
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-brand-primary bg-brand-primary/10 text-brand-primary justify-center px-2"
              href="/parent/dashboard"
              title="Tableau de bord"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <rect
                  fill="currentColor"
                  height="7.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="3.5"
                  y="3.5"
                />
                <rect
                  fill="currentColor"
                  height="5.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="13"
                  y="3.5"
                />
                <rect
                  fill="currentColor"
                  height="9.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="13"
                  y="11"
                />
                <rect
                  fill="currentColor"
                  height="7.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="3.5"
                  y="13"
                />
              </svg>
              <span
                class="sr-only"
              >
                Tableau de bord
              </span>
            </a>
          </div>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/notifications"
              title="Notifications"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.5 16.5h9a2 2 0 0 0 1.5-3.3c-.8-.9-1.1-2-1.1-3.2V9a4.9 4.9 0 1 0-9.8 0v1c0 1.2-.4 2.3-1.1 3.2a2 2 0 0 0 1.5 3.3Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.8"
                />
                <path
                  d="M10 18.5a2 2 0 0 0 4 0"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="sr-only"
              >
                Notifications
              </span>
            </a>
          </div>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/alarms"
              title="Alarmes"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="13"
                  fill="none"
                  r="6.5"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M12 10v3.2l2 1.6"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.7"
                />
                <path
                  d="m5.2 4.6 2 1.9M18.8 4.6l-2 1.9"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="sr-only"
              >
                Alarmes
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <p
            class="sr-only"
          >
            Organisation
          </p>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/organization"
              title="Modules organisation"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <rect
                  fill="none"
                  height="16"
                  rx="3"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  d="M8 9h8M8 12h8M8 15h6"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.7"
                />
              </svg>
              <span
                class="sr-only"
              >
                Modules organisation
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <p
            class="sr-only"
          >
            Fiches
          </p>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/fiches"
              title="Fiches"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 4.5h12a1.5 1.5 0 0 1 1.5 1.5v12a1.5 1.5 0 0 1-1.5 1.5H6A1.5 1.5 0 0 1 4.5 18V6A1.5 1.5 0 0 1 6 4.5Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M8.5 9h7M8.5 12h7M8.5 15h5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.6"
                />
              </svg>
              <span
                class="sr-only"
              >
                Fiches
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <p
            class="sr-only"
          >
            Apprentissages
          </p>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/learning"
              title="Modules apprentissages"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5.5 5.5A2.5 2.5 0 0 1 8 3h4v18H8a2.5 2.5 0 0 1-2.5-2.5v-13Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M18.5 5.5A2.5 2.5 0 0 0 16 3h-4v18h4a2.5 2.5 0 0 0 2.5-2.5v-13Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M9 8.5h2.5M9 11h2.5M14.5 8.5H17M14.5 11H17"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.6"
                />
              </svg>
              <span
                class="sr-only"
              >
                Modules apprentissages
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <p
            class="sr-only"
          >
            Vie quotidienne
          </p>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/meals"
              title="Repas"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6.5 4.5v6M8.5 4.5v6M10.5 4.5v6M8.5 10.5v9"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.8"
                />
                <path
                  d="M15.5 4.5v15M15.5 4.5c2.2 0 4 1.8 4 4v2.2h-4"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="sr-only"
              >
                Repas
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <p
            class="sr-only"
          >
            Vie familiale & motivation
          </p>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
              href="/parent/family"
              title="Modules famille"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="10"
                  fill="none"
                  r="5.5"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M8.5 15.5 7 20l5-2.7L17 20l-1.5-4.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="sr-only"
              >
                Modules famille
              </span>
            </a>
          </div>
        </section>
      </nav>
      <footer
        class="space-y-2 border-t border-border-subtle px-2 py-3"
      >
        <div
          class="block"
          tabindex="0"
        >
          <a
            class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary justify-center px-2"
            href="/parent/settings"
            title="Paramètres"
          >
            <svg
              aria-hidden="true"
              class="size-5 shrink-0"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8.3a3.7 3.7 0 1 0 0 7.4 3.7 3.7 0 0 0 0-7.4Z"
                fill="none"
                stroke="currentColor"
                stroke-width="1.8"
              />
              <path
                d="M19.5 13.5v-3l-2-.5a6.9 6.9 0 0 0-.8-1.8l1.1-1.7-2.1-2.1-1.7 1.1c-.6-.3-1.2-.6-1.8-.8l-.5-2h-3l-.5 2c-.6.2-1.2.5-1.8.8L4.7 4.4 2.6 6.5l1.1 1.7c-.3.6-.6 1.2-.8 1.8l-2 .5v3l2 .5c.2.6.5 1.2.8 1.8l-1.1 1.7 2.1 2.1 1.7-1.1c.6.3 1.2.6 1.8.8l.5 2h3l.5-2c.6-.2 1.2-.5 1.8-.8l1.7 1.1 2.1-2.1-1.1-1.7c.3-.6.6-1.2.8-1.8l2-.5Z"
                fill="none"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
            <span
              class="sr-only"
            >
              Paramètres
            </span>
          </a>
        </div>
        <div
          class="block"
          tabindex="0"
        >
          <button
            class="flex h-touch-lg w-full items-center rounded-radius-button border-l-4 border-l-transparent text-sm font-semibold text-text-secondary transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary hover:bg-bg-surface-hover hover:text-text-primary disabled:pointer-events-none disabled:opacity-60 justify-center px-2"
            title="Deconnexion"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="size-5"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4.5H6.5a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2H10"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="1.8"
              />
              <path
                d="m14 8 4 4-4 4M8 12h10"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
            <span
              class="sr-only"
            >
              Deconnexion
            </span>
          </button>
        </div>
      </footer>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`ParentSidebar > rend les variantes depliee et repliee > expanded 1`] = `
<DocumentFragment>
  <aside
    class="hidden border-r border-border-subtle bg-bg-elevated md:block w-[260px]"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="border-b border-border-subtle p-3"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <a
            class="rounded-radius-button px-2 py-1.5 text-left transition-colors duration-200 hover:bg-bg-surface-hover focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            href="/parent/dashboard"
          >
            <p
              class="font-display font-black tracking-tight text-text-primary text-lg"
            >
              Ezra - Parent
            </p>
            <p
              class="text-xs text-text-secondary block"
            >
              Parent Demo
            </p>
          </a>
          <div
            class="inline-flex"
            tabindex="0"
          >
            <button
              aria-label="Replier la navigation"
              class="items-center justify-center gap-2 rounded-radius-button font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary disabled:pointer-events-none disabled:opacity-55 bg-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary h-touch-sm px-3.5 text-sm inline-flex"
            >
              <svg
                aria-hidden="true"
                class="size-4 transition-transform duration-200"
                viewBox="0 0 24 24"
              >
                <path
                  d="m9 6 6 6-6 6"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.8"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <nav
        aria-label="Navigation principale parent"
        class="flex-1 space-y-4 overflow-y-auto px-2 py-3"
      >
        <section
          class="space-y-1"
        >
          <button
            aria-expanded="true"
            class="flex w-full items-center justify-between rounded-radius-button px-2 py-1 text-left text-xs font-semibold uppercase tracking-wide text-text-muted transition-colors duration-200 hover:bg-bg-surface-hover hover:text-text-secondary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            type="button"
          >
            <span>
              Essentiel
            </span>
            <svg
              aria-hidden="true"
              class="size-4 transition-transform duration-200 rotate-90"
              viewBox="0 0 24 24"
            >
              <path
                d="m9 6 6 6-6 6"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
          </button>
          <div
            class="block"
            tabindex="0"
          >
            <a
              aria-current="page"
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 px-3 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-brand-primary bg-brand-primary/10 text-brand-primary gap-3"
              href="/parent/dashboard"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <rect
                  fill="currentColor"
                  height="7.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="3.5"
                  y="3.5"
                />
                <rect
                  fill="currentColor"
                  height="5.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="13"
                  y="3.5"
                />
                <rect
                  fill="currentColor"
                  height="9.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="13"
                  y="11"
                />
                <rect
                  fill="currentColor"
                  height="7.5"
                  rx="2"
                  stroke="currentColor"
                  stroke-width="1.8"
                  width="7.5"
                  x="3.5"
                  y="13"
                />
              </svg>
              <span
                class="truncate"
              >
                Tableau de bord
              </span>
            </a>
          </div>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 px-3 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary gap-3"
              href="/parent/notifications"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.5 16.5h9a2 2 0 0 0 1.5-3.3c-.8-.9-1.1-2-1.1-3.2V9a4.9 4.9 0 1 0-9.8 0v1c0 1.2-.4 2.3-1.1 3.2a2 2 0 0 0 1.5 3.3Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="1.8"
                />
                <path
                  d="M10 18.5a2 2 0 0 0 4 0"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="truncate"
              >
                Notifications
              </span>
            </a>
          </div>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 px-3 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary gap-3"
              href="/parent/alarms"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <circle
                  cx="12"
                  cy="13"
                  fill="none"
                  r="6.5"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M12 10v3.2l2 1.6"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.7"
                />
                <path
                  d="m5.2 4.6 2 1.9M18.8 4.6l-2 1.9"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.8"
                />
              </svg>
              <span
                class="truncate"
              >
                Alarmes
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <button
            aria-expanded="false"
            class="flex w-full items-center justify-between rounded-radius-button px-2 py-1 text-left text-xs font-semibold uppercase tracking-wide text-text-muted transition-colors duration-200 hover:bg-bg-surface-hover hover:text-text-secondary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            type="button"
          >
            <span>
              Organisation
            </span>
            <svg
              aria-hidden="true"
              class="size-4 transition-transform duration-200"
              viewBox="0 0 24 24"
            >
              <path
                d="m9 6 6 6-6 6"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
          </button>
        </section>
        <section
          class="space-y-1"
        >
          <button
            aria-expanded="false"
            class="flex w-full items-center justify-between rounded-radius-button px-2 py-1 text-left text-xs font-semibold uppercase tracking-wide text-text-muted transition-colors duration-200 hover:bg-bg-surface-hover hover:text-text-secondary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            type="button"
          >
            <span>
              Fiches
            </span>
            <svg
              aria-hidden="true"
              class="size-4 transition-transform duration-200"
              viewBox="0 0 24 24"
            >
              <path
                d="m9 6 6 6-6 6"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
          </button>
        </section>
        <section
          class="space-y-1"
        >
          <button
            aria-expanded="true"
            class="flex w-full items-center justify-between rounded-radius-button px-2 py-1 text-left text-xs font-semibold uppercase tracking-wide text-text-muted transition-colors duration-200 hover:bg-bg-surface-hover hover:text-text-secondary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            type="button"
          >
            <span>
              Apprentissages
            </span>
            <svg
              aria-hidden="true"
              class="size-4 transition-transform duration-200 rotate-90"
              viewBox="0 0 24 24"
            >
              <path
                d="m9 6 6 6-6 6"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
          </button>
          <div
            class="block"
            tabindex="0"
          >
            <a
              class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 px-3 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary gap-3"
              href="/parent/learning"
            >
              <svg
                aria-hidden="true"
                class="size-5 shrink-0"
                viewBox="0 0 24 24"
              >
                <path
                  d="M5.5 5.5A2.5 2.5 0 0 1 8 3h4v18H8a2.5 2.5 0 0 1-2.5-2.5v-13Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M18.5 5.5A2.5 2.5 0 0 0 16 3h-4v18h4a2.5 2.5 0 0 0 2.5-2.5v-13Z"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.8"
                />
                <path
                  d="M9 8.5h2.5M9 11h2.5M14.5 8.5H17M14.5 11H17"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="1.6"
                />
              </svg>
              <span
                class="truncate"
              >
                Modules apprentissages
              </span>
            </a>
          </div>
        </section>
        <section
          class="space-y-1"
        >
          <button
            aria-expanded="false"
            class="flex w-full items-center justify-between rounded-radius-button px-2 py-1 text-left text-xs font-semibold uppercase tracking-wide text-text-muted transition-colors duration-200 hover:bg-bg-surface-hover hover:text-text-secondary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            type="button"
          >
            <span>
              Vie quotidienne
            </span>
            <svg
              aria-hidden="true"
              class="size-4 transition-transform duration-200"
              viewBox="0 0 24 24"
            >
              <path
                d="m9 6 6 6-6 6"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
          </button>
        </section>
        <section
          class="space-y-1"
        >
          <button
            aria-expanded="false"
            class="flex w-full items-center justify-between rounded-radius-button px-2 py-1 text-left text-xs font-semibold uppercase tracking-wide text-text-muted transition-colors duration-200 hover:bg-bg-surface-hover hover:text-text-secondary focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary"
            type="button"
          >
            <span>
              Vie familiale & motivation
            </span>
            <svg
              aria-hidden="true"
              class="size-4 transition-transform duration-200"
              viewBox="0 0 24 24"
            >
              <path
                d="m9 6 6 6-6 6"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
          </button>
        </section>
      </nav>
      <footer
        class="space-y-2 border-t border-border-subtle px-2 py-3"
      >
        <div
          class="block"
          tabindex="0"
        >
          <a
            class="relative flex h-touch-lg items-center rounded-radius-button border-l-4 px-3 text-sm font-semibold transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary border-l-transparent text-text-secondary hover:bg-bg-surface-hover hover:text-text-primary gap-3"
            href="/parent/settings"
          >
            <svg
              aria-hidden="true"
              class="size-5 shrink-0"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8.3a3.7 3.7 0 1 0 0 7.4 3.7 3.7 0 0 0 0-7.4Z"
                fill="none"
                stroke="currentColor"
                stroke-width="1.8"
              />
              <path
                d="M19.5 13.5v-3l-2-.5a6.9 6.9 0 0 0-.8-1.8l1.1-1.7-2.1-2.1-1.7 1.1c-.6-.3-1.2-.6-1.8-.8l-.5-2h-3l-.5 2c-.6.2-1.2.5-1.8.8L4.7 4.4 2.6 6.5l1.1 1.7c-.3.6-.6 1.2-.8 1.8l-2 .5v3l2 .5c.2.6.5 1.2.8 1.8l-1.1 1.7 2.1 2.1 1.7-1.1c.6.3 1.2.6 1.8.8l.5 2h3l.5-2c.6-.2 1.2-.5 1.8-.8l1.7 1.1 2.1-2.1-1.1-1.7c.3-.6.6-1.2.8-1.8l2-.5Z"
                fill="none"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
            <span
              class="truncate"
            >
              Paramètres
            </span>
          </a>
        </div>
        <div
          class="block"
          tabindex="0"
        >
          <button
            class="flex h-touch-lg w-full items-center rounded-radius-button border-l-4 border-l-transparent px-3 text-sm font-semibold text-text-secondary transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-brand-primary hover:bg-bg-surface-hover hover:text-text-primary disabled:pointer-events-none disabled:opacity-60 gap-3"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="size-5"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4.5H6.5a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2H10"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="1.8"
              />
              <path
                d="m14 8 4 4-4 4M8 12h10"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
              />
            </svg>
            <span
              class="block"
            >
              Deconnexion
            </span>
          </button>
        </div>
      </footer>
    </div>
  </aside>
</DocumentFragment>
`;
